crates/tui/tests/storybook/snapshots/app_transcript_group::grep_group_collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* grep ×2
  "render_group" in crates/tui/src
  "ViewState" in crates/core/src





─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
