crates/tui/tests/storybook/snapshots/app_transcript_group::grep_group_expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* grep render_group in crates/tui/src
  2 matches

* grep ViewState in crates/core/src
  2 matches









─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
