crates/tui/tests/storybook/snapshots/app_transcript_group::lsp_tool_group_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* lsp ×5                                                                         14:37:03
  inspect_symbol RenderNode, enum, crates/tui/**/*.rs
  inspect_symbol_at crates/tui/src/content/render_plan.rs:26:17
  find_definition crates/tui/src/content/render_plan.rs:44:19
  find_references crates/tui/src/content/render_plan.rs:26:17
  diagnostics crates/tui/src/content/render_plan.rs














─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
