crates/tui/tests/storybook/snapshots/app_transcript_group::lsp_tool_group_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 595
expression: frame.text()
---
* inspect_symbol RenderNode, enum, crates/tui/**/*.rs

* inspect_symbol_at crates/tui/src/content/render_plan.rs:26:17

* find_definition crates/tui/src/content/render_plan.rs:44:19
  1 definition
  - crates/core/src/transcript_model.rs:118:1

* find_references crates/tui/src/content/render_plan.rs:26:17

* diagnostics crates/tui/src/content/render_plan.rs
  no diagnostics








─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
